--- a/src/styles/CountryList.scss
+++ b/src/styles/CountryList.scss
@@ -1,15 +1,61 @@
-.country-list-container{
+.country-container{
     display: flex;
     flex-direction: column;
     background: #FFF;
     box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.03);
-    width: 267px;
+    width: 100%;
     height: 336px;
     gap: 24px;
     cursor: pointer;
+    border: 1px solid #df0b0b;
     border-radius: 5px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
+
+    .country-flag{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      height: 180px;
+    }
+
+    .flag-icon {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-top: 5px;
+        background-size: cover;
+      }
+
+      .card-body{
+        width: 240px;
+        margin:  0 auto;
+      }
+
+      .card-body h2{
+        font-size: 18px;
+        font-weight: 800;
+        line-height: 26px;
+        letter-spacing: 1px;
+        color: #111517;
+    }
+
+    .card-title{
+      display: flex;
+      flex-direction: column;
+      margin-top: 16px;
+      color: #111517;
+      gap: 7px;
+      text-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+      font-size: 14px;
+      font-weight: 600;
+      line-height: 16px;
+      letter-spacing: 1px;
+  }
 }
