--- a/src/styles/FilterDropdown.scss
+++ b/src/styles/FilterDropdown.scss
@@ -7,14 +7,13 @@
     padding: 5px;
     border-radius: 5px;
     background: #FFF;
+    cursor: pointer;
     box-shadow: 0px 2px 9px 0px rgba(0, 0, 0, 0.05);
 
     select{
         display: flex;
         width: 100%;
-        // background: #FAFAFA;
-        // margin: 18px 22px 18px 24px;
-        // gap: 8px;
+       cursor: pointer;
         border: none;
        
 
@@ -24,7 +23,7 @@
     }
 
     .dropdown-container{
-        //margin-top: 1rem;
+        cursor: pointer;
         display: flex;
         height: 50px;
         width: 200px;
@@ -36,11 +35,5 @@
         -o-border-radius: 5px;
     }
 
-    .region{
-        display: flex;
-        flex-direction: row;
-        width: 100%;
-        height: 120px;
-        // background: red;
-    }
+   
 }
