--- a/src/styles/SearchInput.scss
+++ b/src/styles/SearchInput.scss
@@ -6,6 +6,7 @@
     height: 56px;
     border-radius: 5px;
     background: #FFF;
+    cursor: pointer;
     box-shadow: 0px 2px 9px 0px rgba(0, 0, 0, 0.05);
   
     input {
