worked on country data

--- a/src/styles/CountryData.scss
+++ b/src/styles/CountryData.scss
@@ -16,6 +16,5 @@
     grid-template-columns: repeat(4, 1fr);
     row-gap: 67px;
     column-gap: 6rem;
-    margin: 0 80px 0 80px;
-    border: 2px solid #e6e60b;
+    margin: 100px 80px 0 80px;
   }
