--- a/src/styles/Nav.scss
+++ b/src/styles/Nav.scss
@@ -9,6 +9,7 @@ header{
     h1{
         font-size: 24px;
         color: #111517;
+        font-weight: 800;
         margin: 23px 0 24px 80px;
         cursor: pointer;
     }
