--- a/src/styles/Toggle.scss
+++ b/src/styles/Toggle.scss
@@ -13,8 +13,13 @@
         height: 20px;
     }
 
-    .dark-mode body{
-        background: black;
-        color: var(--light-mode-text);
+    .dark-mode{
+        background-color: #111;
+        color: #fff;
+      }
+
+      .light-mode {
+        background-color: #fff;
+        color: #111;
       }
 }
