--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
   
 body{
     background: #FAFAFA;
-    font-family: "Nunito Sans", sans-serif;
+    font-family: Nunito Sans;
     font-style: normal;
     width: 100%;
 }
