--- a/src/styles/CountryList.scss
+++ b/src/styles/CountryList.scss
@@ -4,10 +4,9 @@
     background: #FFF;
     box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.03);
     width: 100%;
-    height: 336px;
-    gap: 24px;
+    height: 400px;
+    gap: 18px;
     cursor: pointer;
-    border: 1px solid #df0b0b;
     border-radius: 5px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
@@ -31,11 +30,13 @@
         object-fit: cover;
         border-top: 5px;
         background-size: cover;
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
       }
 
       .card-body{
         width: 240px;
-        margin:  0 auto;
+        margin-left: 35px;
       }
 
       .card-body h2{
@@ -49,9 +50,7 @@
     .card-title{
       display: flex;
       flex-direction: column;
-      margin-top: 16px;
       color: #111517;
-      gap: 7px;
       text-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
       font-size: 14px;
       font-weight: 600;
