--- a/src/styles/HomePage.scss
+++ b/src/styles/HomePage.scss
@@ -1,4 +1,3 @@
-
 $margin-vertical: 48px;
 $margin-horizontal: 80px;
 $border-width: 1px;
@@ -19,6 +18,12 @@ $border-width: 1px;
     width: 100%;
     // border: 1px solid #1005a4;
   }
+
+  .filters{
+    display: flex;
+    justify-content: space-between;
+    margin: 48px 80px 48px 80px;
+}
 }
 
 
