--- a/src/styles/SearchInput.scss
+++ b/src/styles/SearchInput.scss
@@ -18,6 +18,7 @@
       color: #848484;
       font-weight: 400;
       line-height: 20px;
+      cursor: pointer;
       &:focus {
         outline: none;
       }
@@ -26,6 +27,7 @@
     .search-icon {
       margin: 19px 0 19px 32px;
       font-size: 20px;
+      color: #848484;
     }
   }
   
