adding dark-made and light-mode toggle

--- a/src/styles/CountryList.scss
+++ b/src/styles/CountryList.scss
@@ -35,8 +35,8 @@
       }
 
       .card-body{
-        width: 240px;
-        margin-left: 35px;
+        width: 200px;
+        margin: 0 0 0 35px;
       }
 
       .card-body h2{
