--- a/src/styles/HomePage.scss
+++ b/src/styles/HomePage.scss
@@ -1,7 +1,3 @@
-$margin-vertical: 48px;
-$margin-horizontal: 80px;
-$border-width: 1px;
-
 
 .home-container{
     width: 100%;
@@ -11,7 +7,7 @@ $border-width: 1px;
     .home-element{
       display: flex;
       justify-content: space-between;
-      margin: $margin-vertical $margin-horizontal;
+      margin: 48px 80px;
     }
 
   .country-home-data{
@@ -24,6 +20,7 @@ $border-width: 1px;
     justify-content: space-between;
     margin: 48px 80px 48px 80px;
 }
+
 }
 
 
