--- a/src/styles/FilterDropdown.scss
+++ b/src/styles/FilterDropdown.scss
@@ -14,7 +14,7 @@
        display: flex;
        width: 100%;
        cursor: pointer;
-       background: #fff;
+    //    background: #fff;
        border: none;
         &:focus {
             outline: none;
@@ -27,16 +27,19 @@
         height: 50px;
         width: 200px;
         border-radius: 5px;
-        // background: #cb0404;
         -webkit-border-radius: 5px;
         -moz-border-radius: 5px;
         -ms-border-radius: 5px;
         -o-border-radius: 5px;
     }
+ 
+}
 
-    .dark-mode select{
-        background: #2B3844;
-    }
+.dark-mode .filter-dropdown{
+    background: #2B3844;
+}
 
-   
+.dark-mode select{
+    background: #2B3844;
+    color: #FFF;
 }
