--- a/src/styles/SearchInput.scss
+++ b/src/styles/SearchInput.scss
@@ -30,4 +30,18 @@
       color: #848484;
     }
   }
+
+  .dark-mode .search{
+    background: #2B3844;
+   
+  }
+
+  .dark-mode .search-icon{
+    color: #FFF;
+  }
+
+  .dark-mode input{
+    color: #FFF;
+  }
+
   
