--- a/src/styles/CountryData.scss
+++ b/src/styles/CountryData.scss
@@ -16,5 +16,13 @@
     grid-template-columns: repeat(4, 1fr);
     row-gap: 67px;
     column-gap: 6rem;
-    margin: 100px 80px 0 80px;
+    // object-fit: cover;
+    // width: 100%;
+    height: 100%;
+    padding: 48px 80px;
+    z-index: -1;
   }
+
+.dark-mode .loading{
+    color: #fff;
+}
