--- a/src/styles/HomePage.scss
+++ b/src/styles/HomePage.scss
@@ -1,26 +1,32 @@
 
 .home-container{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+
+  .home-content{
     width: 100%;
     height: 100%;
-    // border: 1px solid #810404;
-
-    .home-element{
-      display: flex;
-      justify-content: space-between;
-      margin: 48px 80px;
-    }
-
-  .country-home-data{
-    width: 100%;
-    // border: 1px solid #1005a4;
   }
-
-  .filters{
-    display: flex;
-    justify-content: space-between;
-    margin: 48px 80px 48px 80px;
+  
 }
 
+.filters{
+  display: flex;
+  position: relative;
+  top: 49px;
+  justify-content: space-between;
+  margin: 0px 80px 48px 80px;
 }
+
+.dark-mode .home-container{
+  background: #202C36;
+
+}
+
+// .light-mode .home-content{
+//   background: #f2f5f8;
+// }
 
 
