--- a/src/styles/Nav.scss
+++ b/src/styles/Nav.scss
@@ -2,15 +2,28 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: sticky;
+    top: 0;
+    z-index: 1;
     width: 100%;
     height: 80px;
-    background: var(--white);
+    background: #fff;
     box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.06);
-    h1{
-        font-size: 24px;
-        color: #111517;
-        font-weight: 800;
-        margin: 23px 0 24px 80px;
-        cursor: pointer;
-    }
+
+        h1{
+            font-size: 24px;
+            color: #111517;
+            font-weight: 800;
+            margin: 23px 0 24px 80px;
+            cursor: pointer;  
+            text-decoration: none;
+        }
+    
+        .title-link {
+            text-decoration: none; 
+            color: inherit; 
+            cursor: pointer; 
+          }
+          
 }
+
