--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -7,7 +7,7 @@
 }
   
 body{
-    background: #fff;
+    background: #FAFAFA;
     font-style: normal;
     width: 100%;
     height: 100vh;
@@ -16,8 +16,6 @@ body{
 
 .dark-mode {
     background: #202C36;
-    height: 80px;
-  
 }
 
 .dark-mode header {
