--- a/src/styles/CountryCard.scss
+++ b/src/styles/CountryCard.scss
@@ -1,188 +1,196 @@
-.country-card-container{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-    margin: 0 auto;
+.country-card-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  
+  margin: 0 auto;
 }
 
-.country-card-element{
-    display: flex;
-    flex-direction: column;
-    padding: 50px 80px ;
+.country-card-element {
+  display: flex;
+  flex-direction: column;
+  padding: 30px 80px;
+  gap: 12px;
 }
 
-.country-flags-content{
-    // display: flex;
-    height: 100%; 
+.country-flags-content {
+  height: 100%;
 }
 
-.flag-img{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 759.715px;
-    height: 483.169px;
-    flex-shrink: 0;
-    object-fit: cover;
-   
-   background-size: contain;
-    background-position: 100%;
-    border-radius: 5px;
+.flag-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 559.715px;
+  height: 483.169px;
+  flex-shrink: 0;
+  object-fit: cover;
+  background-size: contain;
+  background-position: 100%;
+  border-radius: 5px;
 }
 
-.country-details{
-    display: flex;
-    width: 100%;
-    gap: 50px;
-    height: 100%;
-    margin-top: 24px;
+.country-details {
+  display: flex;
+  width: 100%;
+  gap: 50px;
 }
 
-.mother-container{
-    display: flex;
-    flex-direction: column;
-    padding-top: 40px;
-    width: 450px;
+.mother-container {
+  display: flex;
+  flex-direction: column;
+  padding-top: 28px;
+  width: 700px;
 }
 
-.card-content{
-    display: flex;
-    gap: 20px;
-    margin-top: 25px;
+.card-content {
+  display: flex;
+  gap: 20px;
+  padding-top: 2px;
 }
 
-.native-name{
-    display: flex;
-    flex-direction: column; 
-    margin-top: 25px;
-    gap: 10px;
-    width: 230px;
+.native-name {
+  display: flex;
+  flex-direction: column;
+  margin-top: 25px;
+  gap: 10px;
+  width: 230px;
 }
 
-.domain-level{
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    margin-top: 25px;
+.domain-level {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-top: 25px;
 }
 
-.border-countries{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 1rem;
-    width: 100%;
-    margin-top: 40px;
+.border-countries {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 1rem;
+  width: 100%;
+  margin-top: 40px;
 }
 
 .border-countries strong {
-    display: flex;
-    flex-direction: column;
-    width: 150px;
+  display: flex;
+  flex-direction: column;
+  width: 150px;
 }
 
-.back-button{
+.back-button {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  text-decoration: none;
+  gap: 10px;
+  margin: 0 auto;
+  color: #111517;
+}
+
+h2 {
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: normal;
+}
+
+.toggle-btn {
+  display: flex;
+  flex-direction: row;
+  width: 136px;
+  height: 40px;
+  border-radius: 6px;
+  background: #fff;
+  box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.29);
+}
+
+.arrow-left {
+  width: 20px;
+  height: 20px;
+}
+
+p {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+strong {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 32px;
+}
+
+span,
+h1 {
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 32px;
+}
+
+.border-country-link {
+  display: flex;
+  align-content: center;
+  text-decoration: none;
+  color: #111517;
+  font-size: 14px;
+  width: 130px;
+  height: 35px;
+  flex-shrink: 0;
+  font-weight: 300;
+  border-radius: 2px;
+  border: 0px solid #979797;
+  background: #fff;
+  box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.1);
+  line-height: normal;
+}
+
+.allCountries{
     display: flex;
     flex-direction: row;
-    align-items: center;
-    text-decoration: none;
-    gap: 10px;
-    margin: 0 auto;
-    color: #111517;
+    width: 100vh;
+    // gap: 1rem;
 }
 
-h2{
-    font-size: 32px;
-    font-style: normal;
-    font-weight: 800;
-    line-height: normal;
+.border-list{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 0.2rem;
+    row-gap: 0.2rem;
 }
 
-.toggle-btn{
-    display: flex;
-    flex-direction: row;
-    width: 136px;
-    height: 40px;
-    border-radius: 6px;
-    background: #FFF;
-    box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.29);
+.dark-mode .country-card-container {
+  background: #202c36;
 }
 
-.arrow-left{
-    width: 20px;
-    height: 20px;
-    // flex-shrink: 0;
+.dark-mode .toggle-btn {
+  color: #fff;
+  background: #2b3844;
+  box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.29);
 }
 
-p{
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    
+.dark-mode .arrow-left {
+  color: #fff;
 }
 
-strong{
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 32px;
+.dark-mode h2 {
+  color: #fff;
 }
 
-span, h1{
-    font-size: 16px;
-    font-weight: 300;
-    line-height: 32px;
-}
-.border-country-link{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    // align-items: center;
-    text-decoration: none;
-    color: #111517;
-    font-size: 14px;
-    width: 180px;
-    height: 45px;
-    flex-shrink: 0;
-    font-weight: 300;
-    border-radius: 2px;
-    border: 0px solid #979797;
-    background: #FFF;
-    box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.10);    
-    line-height: normal;
+.dark-mode span {
+  color: #fff;
 }
 
-.dark-mode .country-card-container{
-    background: #202C36;
+.dark-mode .border-country-link {
+  border-radius: 2px;
+  background: #2b3844;
+  box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.1);
+  color: #fff;
 }
 
-.dark-mode .toggle-btn{
-    color: #FFF;
-    background: #2B3844;
-    box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.29);
+.dark-mode .border-list {
+  color: #fff;
 }
-
-.dark-mode .arrow-left{
-    color: #FFF;
-}
-
-.dark-mode h2{
-    color: #FFF;
-}
-
-.dark-mode span{
-    color: #FFF;
-}
-
-.dark-mode .border-country-link{
-    border-radius: 2px;
-    background: #2B3844;
-    box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.10);
-    color: #FFF;
-}
-
-.dark-mode .border-list{
-    color: #FFF;
-}
-
