--- a/src/styles/CountryData.scss
+++ b/src/styles/CountryData.scss
@@ -20,9 +20,21 @@
     // width: 100%;
     height: 100%;
     padding: 48px 80px;
-    z-index: -1;
   }
 
 .dark-mode .loading{
     color: #fff;
+}
+
+@media (max-width: 767px) {
+    .country-grid{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .loading{
+        font-size: 16px;
+        position: relative;
+        top: 65px;
+    }
 }
