--- a/src/styles/CountryList.scss
+++ b/src/styles/CountryList.scss
@@ -1,86 +1,90 @@
-.country-container{
-    display: flex;
-    flex-direction: column;
-    background: #FFF;
-    box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.03);
-    width: 267px;
-    height: 436px;
-    gap: 25px;
-    cursor: pointer;
-    border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
+.country-container {
+  display: flex;
+  flex-direction: column;
+  background: #fff;
+  box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.03);
+  width: 267px;
+  height: 436px;
+  gap: 25px;
+  cursor: pointer;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
 
-    .country-flag {
-      width: 100%;
-      // height: 100%;
-      
-    }
-    
-    .flag-icon {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 267px;
-      height: 160px;    
-      object-fit: cover; 
-      background-size: cover;
-      background-position: center;
-      border-top-left-radius: 5px;
-      border-top-right-radius: 5px;
-      box-sizing: border-box; 
-    }
-    
-
-      .card-body{
-        display: flex;
-        flex-direction: column;
-        gap: 18px;
-        width: 220px;
-        margin: 0px 0px 0px 35px;
-      }
-
-      .card-body h2{
-        font-size: 18px;
-        font-weight: 800;
-        line-height: 26px;
-        letter-spacing: 1px;
-        color: #111517;
-    }
-
-    .card-title{
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-      color: #111517;
-      text-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-      font-size: 14px;
-      font-weight: 300;
-      line-height: 16px;
-      letter-spacing: 1px;
+  .country-flag {
+    width: 100%;
+    // height: 100%;
   }
 
-  strong{
+  .flag-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 267px;
+    height: 160px;
+    object-fit: cover;
+    background-size: cover;
+    background-position: center;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    box-sizing: border-box;
+  }
+
+  .card-body {
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
+    width: 220px;
+    margin: 20px 0px 0px 35px;
+  }
+
+  .card-body h2 {
+    font-size: 18px;
+    font-weight: 800;
+    line-height: 26px;
+    letter-spacing: 1px;
+    color: #111517;
+  }
+
+  .card-title {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    color: #111517;
+    text-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 16px;
+    letter-spacing: 1px;
+  }
+
+  strong {
     color: #111517;
     font-weight: 600;
   }
 }
 
-  .dark-mode .country-container{
-    background: #2B3844;
-    box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.03);
+.dark-mode .country-container {
+  background: #2b3844;
+  box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.03);
 }
 
-.dark-mode .card-body h2{
-  color: #FFF;
+.dark-mode .card-body h2 {
+  color: #fff;
 }
 
-.dark-mode .card-title{
-  color: #FFF;
+.dark-mode .card-title {
+  color: #fff;
 }
 
-.dark-mode strong{
-  color: #FFF;
+.dark-mode strong {
+  color: #fff;
+}
+
+@media (max-width: 768px) {
+  .country-container .flag-icon{
+    margin: 32px 55px 0 55px;
+  }
 }
