--- a/src/styles/HomePage.scss
+++ b/src/styles/HomePage.scss
@@ -9,24 +9,27 @@
     width: 100%;
     height: 100%;
   }
+
+  .filters{
+    display: flex;
+    position: relative;
+    top: 49px;
+    justify-content: space-between;
+    padding: 0px 80px 48px 80px;
+  }
   
 }
 
-.filters{
-  display: flex;
-  position: relative;
-  top: 49px;
-  justify-content: space-between;
-  margin: 0px 80px 48px 80px;
+@media (max-width: 768px){
+ .home-container .filters{
+    flex-direction: column;
+    padding: 0px 16px;
+    gap: 40px;
+  }
 }
 
-.dark-mode .home-container{
-  background: #202C36;
 
-}
 
-// .light-mode .home-content{
-//   background: #f2f5f8;
-// }
+
 
 
