--- a/src/styles/CountryCard.scss
+++ b/src/styles/CountryCard.scss
@@ -3,7 +3,6 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
-  
   margin: 0 auto;
 }
 
@@ -22,10 +21,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 559.715px;
+  width: 100%;
   height: 483.169px;
   flex-shrink: 0;
-  object-fit: cover;
   background-size: contain;
   background-position: 100%;
   border-radius: 5px;
@@ -34,7 +32,7 @@
 .country-details {
   display: flex;
   width: 100%;
-  gap: 50px;
+  gap: 40px;
 }
 
 .mother-container {
@@ -68,16 +66,14 @@
 .border-countries {
   display: flex;
   align-items: center;
-  flex-wrap: wrap;
-  gap: 1rem;
-  width: 100%;
-  margin-top: 40px;
+  gap: 15rem;
+  margin-top: 35px;
 }
 
-.border-countries strong {
+.country-border-name {
   display: flex;
-  flex-direction: column;
-  width: 150px;
+  width: 50%;
+  height: 70%;
 }
 
 .back-button {
@@ -133,12 +129,10 @@ h1 {
 
 .border-country-link {
   display: flex;
-  align-content: center;
   text-decoration: none;
   color: #111517;
   font-size: 14px;
-  width: 130px;
-  height: 35px;
+  padding: 8px 1rem;
   flex-shrink: 0;
   font-weight: 300;
   border-radius: 2px;
@@ -148,18 +142,16 @@ h1 {
   line-height: normal;
 }
 
-.allCountries{
-    display: flex;
-    flex-direction: row;
-    width: 100vh;
-    // gap: 1rem;
+.allCountries {
+  display: flex;
+  flex-direction: row;
 }
 
-.border-list{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    column-gap: 0.2rem;
-    row-gap: 0.2rem;
+.border-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5px;
+  place-items: center;
 }
 
 .dark-mode .country-card-container {
@@ -193,4 +185,58 @@ h1 {
 
 .dark-mode .border-list {
   color: #fff;
+}
+
+@media only screen and (max-width: 480px) and (min-width: 375px) {
+  .mother-container {
+    width: 275px;
+  }
+
+  .flag-img {
+    width: 319.837px;
+    height: 275.924px;
+    flex-shrink: 0;
+  }
+
+  .country-flags-content {
+    width: 340px;
+  }
+
+  .country-card-element {
+    display: flex;
+    margin-top: 3rem;
+    padding: 0;
+  }
+  .country-details {
+    display: grid;
+    grid-template-columns: 1fr;
+    place-items: center;
+    width: 340px;
+  }
+
+  .card-content {
+    flex-direction: column;
+  }
+
+  .allCountries {
+    width: 275px;
+    flex-direction: column;
+  }
+
+  .border-countries {
+    flex-direction: column;
+  }
+
+  .border-list {
+    align-content: center;
+    text-align: center;
+    align-items: center;
+  }
+
+  .country-card-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    place-items: center;
+  }
 }
