--- a/src/styles/CountryList.scss
+++ b/src/styles/CountryList.scss
@@ -1,9 +1,11 @@
 .country-container {
   display: flex;
+  object-fit: cover;
+  object-fit: contain;
   flex-direction: column;
   background: #fff;
   box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.03);
-  width: 267px;
+  width: 100%;
   height: 436px;
   gap: 25px;
   cursor: pointer;
@@ -15,17 +17,22 @@
 
   .country-flag {
     width: 100%;
-    // height: 100%;
+    height: 190px;
+    object-fit: cover;
+    object-fit: contain;
   }
 
   .flag-icon {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 267px;
-    height: 160px;
+    width: 100%;
+    height: 190px;
+    flex-shrink: 0;
     object-fit: cover;
-    background-size: cover;
+
+    background-repeat: no-repeat;
+    background-size: contain;
     background-position: center;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
@@ -83,8 +90,9 @@
   color: #fff;
 }
 
-@media (max-width: 768px) {
-  .country-container .flag-icon{
-    margin: 32px 55px 0 55px;
+@media only screen and (max-width: 480px) and (min-width: 375px) {
+  .country-container {
+    margin-top: 100px;
+    // margin: 32px 0px 0px 54px;
   }
 }
