--- a/src/styles/HomePage.scss
+++ b/src/styles/HomePage.scss
@@ -1,35 +1,27 @@
-
-.home-container{
+.home-container {
   display: flex;
   flex-direction: column;
   width: 100%;
   height: 100%;
 
-  .home-content{
+  .home-content {
     width: 100%;
     height: 100%;
   }
 
-  .filters{
+  .filters {
     display: flex;
     position: relative;
     top: 49px;
     justify-content: space-between;
     padding: 0px 80px 48px 80px;
   }
-  
 }
 
-@media (max-width: 768px){
- .home-container .filters{
+@media only screen and (max-width: 480px) and (min-width: 375px) {
+  .home-container .filters {
     flex-direction: column;
     padding: 0px 16px;
     gap: 40px;
   }
 }
-
-
-
-
-
-
