--- a/src/styles/Nav.scss
+++ b/src/styles/Nav.scss
@@ -26,16 +26,15 @@ header {
   }
 }
 
-@media (max-width: 765px) {
+@media only screen and (max-width: 480px) and (min-width: 375px) {
+  header {
+    padding: 30px 16px;
 
-    header{
-        padding: 30px 16px;
-        
-        h1 {
-            font-size: 14px;
-            font-style: normal;
-            font-weight: 800;
-            line-height: 20px;
-          }
+    h1 {
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 800;
+      line-height: 20px;
     }
   }
+}
