--- a/src/styles/Toggle.scss
+++ b/src/styles/Toggle.scss
@@ -18,23 +18,23 @@
 }
 
 .mode-text {
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-  }
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
 
 .dark-mode .mode-text {
   color: #ffffff;
 }
 
-@media (max-width: 768px) {
-    .mode-text{
-        font-size: 12px;
-    }
+@media only screen and (max-width: 480px) and (min-width: 375px) {
+  .mode-text {
+    font-size: 12px;
+  }
 
-    .icon {
-        width: 16px;
-        height: 16px;
-      }
+  .icon {
+    width: 16px;
+    height: 16px;
+  }
 }
