working on mobile devices

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -15,14 +15,10 @@ body {
 
 .dark-mode {
   background: #202c36;
-}
 
-.dark-mode header {
+header {
   background: #2b3844;
   box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.06);
 }
 
-.dark-mode h1 {
-  color: #fff;
 }
-
