--- a/src/styles/CountryData.scss
+++ b/src/styles/CountryData.scss
@@ -51,6 +51,7 @@
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     align-items: center;
+    padding: 35px 55px;
 
     .link {
       width: 100%;
