--- a/src/styles/FilterDropdown.scss
+++ b/src/styles/FilterDropdown.scss
@@ -1,10 +1,10 @@
 .filter-dropdown {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  // justify-content: center;
+  // align-items: center;
   width: 200px;
   height: 56px;
-  padding: 5px;
+  padding: 8px;
   border-radius: 5px;
   background: #fff;
   cursor: pointer;
@@ -12,8 +12,8 @@
 
   select {
     display: flex;
+    border-radius: 5px;
     width: 100%;
-    // margin: 18px 24px;
     cursor: pointer;
     border: none;
     &:focus {
@@ -25,7 +25,7 @@
     cursor: pointer;
     display: flex;
     height: 50px;
-    width: 200px;
+    // width: 200px;
     border-radius: 5px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
