--- a/src/styles/SearchInput.scss
+++ b/src/styles/SearchInput.scss
@@ -31,16 +31,23 @@
   }
 }
 
-.dark-mode .search {
+.dark-mode{
+
+ .search {
   background: #2b3844;
 }
 
-.dark-mode .search-icon {
+.search-icon {
   color: #fff;
 }
 
-.dark-mode .search input {
+.search input {
   color: #fff;
+}
+
+ ::placeholder{
+  color: #fff;
+}
 }
 
 @media only screen and (max-width: 480px) and (min-width: 375px) {
