--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -13,12 +13,9 @@ body {
   height: 100vh;
 }
 
-.dark-mode {
-  background: #202c36;
+// .dark-mode {
+//   background: #202c36;
 
-header {
-  background: #2b3844;
-  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.06);
-}
 
-}
+
+
