--- a/src/styles/Toggle.scss
+++ b/src/styles/Toggle.scss
@@ -17,6 +17,15 @@
   color: #ffffff;
 }
 
+.dark-mode{
+  background: #202c36;
+}
+
+.dark-mode header {
+  background: #2b3844;
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.06);
+}
+
 .mode-text {
   font-size: 16px;
   font-style: normal;
