--- a/src/styles/CountryCard.scss
+++ b/src/styles/CountryCard.scss
@@ -66,13 +66,17 @@
 .border-countries {
   display: flex;
   align-items: center;
-  gap: 15rem;
+  // gap: 15rem;
   margin-top: 35px;
 }
 
 .country-border-name {
   display: flex;
-  gap: 15px;
+  width: 30%;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 24px;
 }
 
 .back-button {
@@ -132,11 +136,11 @@ h1 {
   height: 1.75rem;
   border-radius: 0.125rem;
   border: 0px solid #979797;
-  background: #FFF;
-  box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.10);
-  margin-right: 0.5rem; 
+  background: #fff;
+  box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.1);
+  margin-right: 0.5rem;
   margin-bottom: 0.5rem;
-  padding: 0.25rem 0.5rem; 
+  padding: 0.25rem 0.5rem;
   text-align: center;
   text-decoration: none;
   color: #000;
@@ -157,39 +161,38 @@ h1 {
 }
 
 .dark-mode {
-.country-card-container {
-  background: #202c36;
+  .country-card-container {
+    background: #202c36;
+  }
 
-}
+  .toggle-btn {
+    color: #fff;
+    background: #2b3844;
+    box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.29);
+  }
 
-.toggle-btn {
-  color: #fff;
-  background: #2b3844;
-  box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.29);
-}
+  .arrow-left {
+    color: #fff;
+  }
 
-.arrow-left {
-  color: #fff;
-}
+  h2 {
+    color: #fff;
+  }
 
-h2 {
-  color: #fff;
-}
+  span {
+    color: #fff;
+  }
 
-span {
-  color: #fff;
-}
+  .border-country-link {
+    border-radius: 2px;
+    background: #2b3844;
+    box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.1);
+    color: #fff;
+  }
 
-.border-country-link {
-  border-radius: 2px;
-  background: #2b3844;
-  box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.1);
-  color: #fff;
-}
-
-.border-list {
-  color: #fff;
-}
+  .border-list {
+    color: #fff;
+  }
 }
 
 @media only screen and (max-width: 480px) and (min-width: 375px) {
@@ -197,7 +200,7 @@ span {
     width: 275px;
   }
 
-  .toggle-btn{
+  .toggle-btn {
     margin: 0px 9px;
   }
 
