--- a/src/styles/FilterDropdown.scss
+++ b/src/styles/FilterDropdown.scss
@@ -1,43 +1,39 @@
 .filter-dropdown {
   display: flex;
   position: relative;
-  margin-top: 10px;
-  width: 200px;
+  // margin-top: 10px;
+  max-width: 200px;
+  width: 100%;
   height: 56px;
-  padding: 8px;
   border-radius: 5px;
-  background: #fff;
-  cursor: pointer;
-  box-shadow: 0px 2px 9px 0px rgba(0, 0, 0, 0.05);
 
-  select {
-    display: flex;
+  .select-btn {
+    // display: flex;
+    // justify-content: space-between;
     border-radius: 5px;
     width: 100%;
     cursor: pointer;
     border: none;
-    &:focus {
+    box-shadow: 0px 2px 9px 0px rgba(0, 0, 0, 0.05);
+    select{
+      width: 100%;
+      border: none;
+      font-size: 14px;
+      padding: 10px 10px;
+      height: 56px;
+      font-weight: 400;
+      line-height: 20px;
+      &:focus {
       outline: none;
     }
 
-    ::after {
-      content: "";
-      position: absolute;
-      top: 100%;
-      right: 12px;
-      transform: translateY(-50%);
-      width: 0;
-      height: 0;
-      border-left: 6px solid transparent;
-      border-right: 6px solid transparent;
-      border-top: 6px solid #000; 
-      pointer-events: none;
-    }
+  }
   }
 
   .dropdown-container {
     cursor: pointer;
     display: flex;
+    padding-bottom: 15px;
     // height: 50px;
     // width: 200px;
     border-radius: 5px;
@@ -46,12 +42,6 @@
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
   }
-}
-
-
-
-.custom-select select {
-  padding-right: 24px; /* Adjust the padding as needed */
 }
 
 .dark-mode .filter-dropdown {
