--- a/src/styles/CountryCard.scss
+++ b/src/styles/CountryCard.scss
@@ -9,8 +9,8 @@
 .country-card-element {
   display: flex;
   flex-direction: column;
-  padding: 30px 80px;
-  gap: 12px;
+  padding: 40px 80px;
+  gap: 25px;
 }
 
 .country-flags-content {
@@ -102,8 +102,10 @@ h2 {
   width: 136px;
   height: 40px;
   border-radius: 6px;
-  background: #fff;
-  box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.29);
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  -ms-border-radius: 6px;
+  -o-border-radius: 6px;
 }
 
 .arrow-left {
