--- a/src/styles/HomePage.scss
+++ b/src/styles/HomePage.scss
@@ -7,6 +7,7 @@
   .filters {
     display: flex;
     position: relative;
+    // gap: 1300px;
     top: 49px;
     justify-content: space-between;
     padding: 0px 80px 48px 80px;
