--- a/src/styles/FilterDropdown.scss
+++ b/src/styles/FilterDropdown.scss
@@ -1,53 +1,43 @@
-.filter-dropdown {
+.dropdown-container {
   display: flex;
-  position: relative;
-  // margin-top: 10px;
-  max-width: 200px;
-  width: 100%;
+  flex-direction: column;
+  width: 200px;
   height: 56px;
+  flex-shrink: 0;
   border-radius: 5px;
+  cursor: pointer;
+  background: #fff;
+  box-shadow: 0px 2px 9px 0px rgba(0, 0, 0, 0.05);
 
-  .select-btn {
-    // display: flex;
-    // justify-content: space-between;
-    border-radius: 5px;
-    width: 100%;
-    cursor: pointer;
-    border: none;
-    box-shadow: 0px 2px 9px 0px rgba(0, 0, 0, 0.05);
-    select {
-      width: 100%;
-      border: none;
-      font-size: 14px;
-      padding: 10px 10px;
-      height: 56px;
-      font-weight: 400;
-      line-height: 20px;
-      &:focus {
-        outline: none;
-      }
-    }
-  }
-
-  .dropdown-container {
-    cursor: pointer;
+  .dropdown-header {
     display: flex;
-    padding-bottom: 15px;
-    // height: 50px;
-    // width: 200px;
+    justify-content: space-between;
+    margin: 15px 22px;
+  }
+
+  .dropdown-icon {
+    width: 12px;
+    height: 12px;
+    flex-shrink: 0;
+  }
+
+  .dropdown-options {
     border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
+    background: #fff;
+    padding: 16px 0 16px 24px;
+    box-shadow: 0px 2px 9px 0px rgba(0, 0, 0, 0.05);
   }
 }
 
-.dark-mode .filter-dropdown {
+.dark-mode .dropdown-container {
+  border-radius: 5px;
   background: #2b3844;
+  box-shadow: 0px 2px 9px 0px rgba(0, 0, 0, 0.05);
 }
 
-.dark-mode select {
-  background: #2b3844;
+.dark-mode .dropdown-options {
+  border-radius: 5px;
   color: #fff;
+  background: #2b3844;
+  box-shadow: 0px 2px 9px 0px rgba(0, 0, 0, 0.05);
 }
