--- a/src/styles/HomePage.scss
+++ b/src/styles/HomePage.scss
@@ -1,23 +1,25 @@
 .home-container {
   display: flex;
   flex-direction: column;
+  margin-top: 48px;
   width: 100%;
   height: 100%;
 
   .filters {
     display: flex;
     position: relative;
-    // gap: 1300px;
-    top: 49px;
+    max-width: 100%;
+    height: 56px;
     justify-content: space-between;
-    padding: 0px 80px 48px 80px;
+    margin: 0px 80px 0px 80px;
+    // padding: 0px 80px 48px 80px;
   }
 }
 
 @media only screen and (max-width: 480px) and (min-width: 375px) {
   .home-container .filters {
     flex-direction: column;
-    padding: 0px 16px;
+    margin: 0 0 0 16px;
     gap: 40px;
   }
 }
