--- a/src/styles/CountryCard.scss
+++ b/src/styles/CountryCard.scss
@@ -71,9 +71,8 @@
 
 .country-border-name {
   display: flex;
-  width: 30%;
+  width: 140px;
   font-size: 16px;
-  font-style: normal;
   font-weight: 600;
   line-height: 24px;
 }
