--- a/src/styles/CountryData.scss
+++ b/src/styles/CountryData.scss
@@ -11,15 +11,25 @@
   border-radius: 50%;
   width: 50px;
   height: 50px;
-  animation: spin 2s linear infinite;
+  animation: spin 3s linear infinite;
+  -webkit-animation: spin 3s linear infinite;
 }
 
 @keyframes spin {
   0% {
     transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
   }
 }
 
@@ -32,17 +42,14 @@
   object-fit: contain;
   text-decoration: none;
   width: 100%;
-  height: 426px;
+  height: 440px;
   flex-shrink: 0;
-  // border: 2px solid #eb1212;
 }
 
 .country-grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 67px;
-  //   width: 100%;
-  //   height: 100%;
   padding: 48px 80px;
 }
 
@@ -66,6 +73,6 @@
   .loading {
     font-size: 16px;
     position: relative;
-    top: 65px;
+    // top: 20px;
   }
 }
