--- a/src/styles/FilterDropdown.scss
+++ b/src/styles/FilterDropdown.scss
@@ -1,6 +1,9 @@
 .dropdown-container {
   display: flex;
   flex-direction: column;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 16px;
   width: 200px;
   height: 56px;
   flex-shrink: 0;
@@ -11,20 +14,23 @@
 
   .dropdown-header {
     display: flex;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 16px;
     justify-content: space-between;
     margin: 15px 22px;
   }
 
-  .dropdown-icon {
-    width: 12px;
-    height: 12px;
-    flex-shrink: 0;
-  }
-
   .dropdown-options {
+    display: flex;
+    flex-direction: column;
+    font-size: 12px;
+    gap: 8px;
+    font-weight: 400;
+    line-height: 16px;
     border-radius: 5px;
     background: #fff;
-    padding: 16px 0 16px 24px;
+    padding: 16px 16px 16px 24px;
     box-shadow: 0px 2px 9px 0px rgba(0, 0, 0, 0.05);
   }
 }
