--- a/src/styles/CountryData.scss
+++ b/src/styles/CountryData.scss
@@ -61,8 +61,9 @@
   .country-grid {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
+    justify-content: center;
     align-items: center;
-    padding: 35px 55px;
+    margin: 32px 55px;
 
     .link {
       width: 100%;
