--- a/src/styles/CountryList.scss
+++ b/src/styles/CountryList.scss
@@ -51,7 +51,7 @@
     font-size: 18px;
     font-weight: 800;
     line-height: 26px;
-    letter-spacing: 1px;
+    // letter-spacing: 1px;
     color: #111517;
   }
 
