--- a/src/styles/Toggle.scss
+++ b/src/styles/Toggle.scss
@@ -10,6 +10,7 @@
   .icon {
     width: 20px;
     height: 20px;
+    flex-shrink: 0;
   }
 }
 
@@ -28,7 +29,7 @@
 
 .mode-text {
   font-size: 16px;
-  font-style: normal;
+  color: #111517;
   font-weight: 600;
   line-height: normal;
 }
