dark mode update

--- a/src/styles/CountryCard.scss
+++ b/src/styles/CountryCard.scss
@@ -132,7 +132,6 @@ span {
 
 .border-country-link {
   display: inline-block;
-  // width: 6rem;
   height: 1.75rem;
   border-radius: 0.125rem;
   border: 0px solid #979797;
@@ -171,11 +170,10 @@ span {
     box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.29);
   }
 
-  .arrow-left {
-    color: #fff;
-  }
-
-  h2 {
+  h2,
+  span,
+  .arrow-left,
+  .border-list {
     color: #fff;
   }
 
@@ -183,10 +181,6 @@ span {
     border-radius: 2px;
     background: #2b3844;
     box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.1);
-    color: #fff;
-  }
-
-  .border-list {
     color: #fff;
   }
 }
