--- a/src/styles/SearchInput.scss
+++ b/src/styles/SearchInput.scss
@@ -19,6 +19,7 @@
     font-weight: 400;
     line-height: 20px;
     cursor: pointer;
+
     &:focus {
       outline: none;
     }
@@ -26,7 +27,9 @@
 
   .search-icon {
     margin: 19px 0 19px 32px;
-    font-size: 20px;
+    width: 18px;
+    height: 18px;
+    flex-shrink: 0;
     color: #848484;
   }
 }
