cursor pointer update

--- a/src/styles/CountryCard.scss
+++ b/src/styles/CountryCard.scss
@@ -101,6 +101,7 @@
   gap: 10px;
   margin: 0 auto;
   background: #fff;
+  cursor: pointer;
 }
 
 h2 {
@@ -115,6 +116,7 @@ h2 {
   width: 136px;
   height: 40px;
   background: #FFF;
+  cursor: pointer;
   box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.29);
   border-radius: 6px;
   -webkit-border-radius: 6px;
